--- a/assets/css/welcome_page.css
+++ b/assets/css/welcome_page.css
@@ -1,15 +1,31 @@
 /* Welcome Page Section */
+
+.ims_container{
+    /* margin: 0 20% 0 20%;
+    margin-left: 30px;
+    margin-right: 30px; */
+    background-color: red;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+}
 .welcome_page {
-    background: rgba(0, 0, 255, 0.3);
+    
+    /* background: rgba(0, 0, 255, 0.3); */
     /* Blueish background with transparency */
-    backdrop-filter: blur(14px) saturate(160%);
+    /* backdrop-filter: blur(14px) saturate(160%); */
     color: white;
     text-align: center;
-    padding: 90px 60px;
+    padding: 90px 30px;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    width: 80%;
-    max-width: 500px;
+    width: 50%;
+    /* max-width: 500px; */
+    
     /* Limit the width */
 }
 
@@ -38,4 +54,11 @@
 .welcome_page button:hover {
     background-color: navy;
     /* Darken button on hover */
+}
+
+@media (max-width: 40.645rem) {
+    .welcome_page {   
+        width: 80%;
+        padding: 20px 20px;
+    }
 }
