--- a/assets/css/welcome_page.css
+++ b/assets/css/welcome_page.css
@@ -1,23 +1,18 @@
 /* Welcome Page Section */
 
 .ims_container{
-    /* margin: 0 20% 0 20%;
-    margin-left: 30px;
-    margin-right: 30px; */
-    background-color: red;
     position: relative;
     width: 100vw;
     height: 100vh;
-    
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
 }
 .welcome_page {
     
-    /* background: rgba(0, 0, 255, 0.3); */
+    background: rgba(0, 0, 255, 0.3);
     /* Blueish background with transparency */
-    /* backdrop-filter: blur(14px) saturate(160%); */
+    backdrop-filter: blur(14px) saturate(160%);
     color: white;
     text-align: center;
     padding: 90px 30px;
@@ -58,7 +53,7 @@
 
 @media (max-width: 40.645rem) {
     .welcome_page {   
-        width: 80%;
+        width: 70%;
         padding: 20px 20px;
     }
 }
