--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -66,7 +66,7 @@ nav label {
 
     nav ul {
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
 
     }
 
