--- a/assets/css/home_page.css
+++ b/assets/css/home_page.css
@@ -4,6 +4,7 @@ body{
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 /* Main Content */
