--- a/admin/assets/css/sidebar.css
+++ b/admin/assets/css/sidebar.css
@@ -110,6 +110,9 @@
 .sub-menu{
     
 }
+.sub-menu li .sub-menu-items li{
+    padding-right: 20px; /* Space for the arrow */
+}
 .sub-menu .sub-menu-items{
     list-style: none;
     padding: 0;
