--- a/admin/assets2/css/sidebar.css
+++ b/admin/assets2/css/sidebar.css
@@ -64,11 +64,10 @@
 .sidebar-header {
     color: #fff;
     position: relative;
-    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 15px;
+    padding: 15px 10px 15px 10px;
     width: 100%;
     height: 50px;
     transition: width .3s ease;
@@ -82,9 +81,23 @@
     font-size: 24px;
     transform: rotate(180deg); /* Centers the arrow */
 }
-.sidebar-collapse .menu_button_container{
+.menu_button_container{
     padding: 17px;
     font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    padding: 5px 9px 5px 9px;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border-radius: 5%;
+}
+
+.menu_button_container:hover{
+    color: var(--primary-color);
+    background-color: #fff;
 }
 /* Logo Text */
 .sidebar-expand .header_text {
@@ -268,7 +281,6 @@
         /* Hidden by default */
         height: 100%;
         width: 250px;
-        background-color: green;
         box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
         /* transition: left 0.5s ease; */
         z-index: 1050;
@@ -311,5 +323,7 @@
         opacity: 0;
         transition: opacity 2s ease;
     }
-    
+    .header .menu_button{
+        display: block;
+    }
 }
